--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Am I Busy?</title>
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <link rel="manifest" href="/manifest.json">
+  <link rel="apple-touch-icon" sizes="256x256" href="/favicon.png">
+  <link rel="shortcut icon" href="/favicon.png">
   <link rel="stylesheet" href="./main.css">
   <script type="module" src="./main.js"></script>
 </head>
