Add Discord webhook support

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,10 @@
         <button type="button" data-action="activate-1h">1 hour</button>
         <button type="button" data-action="activate-2h">2 hour</button>
         <button type="button" data-action="cancel">Not Busy</button>
+        <label>
+          <input id="notification" type="checkbox" checked>
+          Send notifications to Discord
+        </label>
       </nav>
     </footer>
   </status-manager>
