--- a/public/index.html
+++ b/public/index.html
@@ -26,14 +26,16 @@
     </main>
     <footer>
       <nav>
-        <button type="button" data-action="activate-30m">&half; hour</button>
-        <button type="button" data-action="activate-1h">1 hour</button>
-        <button type="button" data-action="activate-2h">2 hour</button>
-        <button type="button" data-action="cancel">Not Busy</button>
-        <label>
+        <div class="button-group">
+          <button type="button" data-action="activate-30m">&half; hour</button>
+          <button type="button" data-action="activate-1h">1 hour</button>
+          <button type="button" data-action="activate-2h">2 hour</button>
+          <button type="button" data-action="cancel">Not Busy</button>
+        </div>
+        <div>
           <input id="notification" type="checkbox" checked>
-          Send notifications to Discord
-        </label>
+          <label for="notification">Send notifications to Discord</label>
+        </div>
       </nav>
     </footer>
   </status-manager>
